updates to about, header and images

--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -190,6 +190,18 @@
     height: 90%;
   }
 
+  .box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    width: 100%;
+    height: 90%;
+    background: #ddd;
+    z-index: 0;
+  }
+
   @media screen and (max-width: 1200px) {
     margin: 2rem 0;
   }
